--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,22 @@
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
+
 plugins {
+    id 'application'
     id 'java'
     id 'io.freefair.lombok' version '8.0.1'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 group = 'exmp'
 version = '1.0-SNAPSHOT'
+apply plugin: 'java'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    shadow 'junit:junit:3.8.2'
     compileOnly 'org.projectlombok:lombok:1.18.26'
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
 
@@ -20,4 +26,22 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'exmp.Main'
+    }
+}
+
+sourceSets.main.java.srcDirs = ['src/main/java/']
+sourceSets {
+    main {
+        java {
+            srcDirs = ['src/main/java/']
+        }
+        resources {
+            srcDirs = ['src/main/resources/']
+        }
+    }
 }
